# local-model-manager

./: LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  catalog.ts  main.tsx  templates.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  import.rs  lib.rs  main.rs  ollama.rs  service.rs  sysmon.rs
src/api/: ollama.ts  transport.tauri.ts  transport.ts
src/components/: Gauge.tsx  ServiceBar.tsx
src/hooks/: useDownloads.ts  useServiceStatus.ts  useSystemStats.ts
src/pages/: CatalogPage.tsx  ChatPage.tsx  ImportPullPage.tsx  ModelsPage.tsx  MonitorPage.tsx
src/styles/: app.css  theme.css
src/utils/: format.ts  recommend.ts
